<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="server_client_id">277110432670-0jdijokbo3keq15pegfac9ojd2mq97kb.apps.googleusercontent.com</string>
    <string name="app_name">myQuiz</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="title_activity_score">ScoreActivity</string>
    <string name="finalScore">Score</string>
    <string name="title_activity_past_quizzes">PastQuizzesActivity</string>
    <string name="quizzes">Quizzes</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_get_quiz">GetQuizActivity</string>
    <string name="get_quiz">Get Quiz</string>
    <string name="default_quiz">http://people.tamu.edu/~almeagher/app/test.txt</string>
<<<<<<< HEAD

    <string name="title_text">Google Sign-In</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person"> Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is enabled for your project, you have a properly configured google-services.json file and that your device has an internet connection. </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>
    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>
    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>
    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>
    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

=======
    <string name="delete_quiz">Delete</string>
>>>>>>> newbranch
</resources>
